# imagecat

./: .gitignore  .travis.yml  README.md  pyproject.toml  regression.py  setup.py
.github/workflows/: regression-tests.yml
artwork/tex/: mona-lisa.txt
docs/: anaconda-installation.rst  compatibility.rst  conf.py  contributing.rst  credits.rst  dependencies.rst  design.rst  developers.rst  development.rst  gallery.rst  imagecat.color.basic.rst  imagecat.color.brewer.rst  imagecat.color.rst  imagecat.data.rst  imagecat.expression.rst  imagecat.io.rst  imagecat.notebook.rst  imagecat.operator.blur.rst  imagecat.operator.color.rst  imagecat.operator.cryptomatte.rst  imagecat.operator.fill.rst  imagecat.operator.noise.rst  imagecat.operator.remap.rst  imagecat.operator.render.rst  imagecat.operator.rst  imagecat.operator.transform.rst  imagecat.operator.util.rst  imagecat.optional.rst  imagecat.require.rst  imagecat.rst  imagecat.units.rst  imagecat.util.rst  index.rst  installation.rst  reference.rst  release-notes.rst  requirements.txt  support.rst  user-guide.rst
docs/css/: imagecat.css
docs/gallery/: cryptomatte.ipynb  fill.ipynb  gaussian.ipynb  offset.ipynb  text.ipynb  uniform.ipynb
docs/user-guide/: README.md  cryptomatte.ipynb  uniform.ipynb
features/: cryptomatte.feature  documentation.feature  operations.feature  operators.feature
features/reference/: chelsea-exr.icp  chelsea-png.icp  chelsea.icp  colormap-default.icp  colormap-linear-basic-blackbody.icp  colormap-linear-brewer-bluered.icp  composite-tl.icp  composite.icp  cryptomatte-bunny-all-clown.icp  cryptomatte-bunny-flowers-clown.icp  cryptomatte-bunny-flowers.icp  cryptomatte-bunny-porcelain-clown.icp  (+26 more)
imagecat/: __init__.py  color.py  data.py  expression.py  io.py  notebook.py  operator.py  require.py  storage.py  units.py  util.py
notebooks/: basic-api.ipynb  color-management.ipynb  color-mapping.ipynb  composite.ipynb  cryptomatte.ipynb  expressions.ipynb  exr-output.ipynb  fill.ipynb  gaussian.ipynb  io-errors.ipynb  io-openexr.ipynb  layers.ipynb  numpy-visualization.ipynb  offset.ipynb  openexr-io.ipynb  pickle-compression.ipynb  pil-io.ipynb  resize.ipynb  scale.ipynb  solid.ipynb  test-results.ipynb  text.ipynb  view-test.ipynb
(+34 files in other folders)
